Closed Bug 381145 Opened 18 years ago Closed 18 years ago

export doesn't write out toolbar folder attribute in some circumstances

Categories

(Firefox :: Bookmarks & History, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 3 alpha5

People

(Reporter: dietrich, Assigned: moco)

References

Details

Attachments

(1 file, 1 obsolete file)

STR: open the browser, shut it down right as the gui becomes visible. expected results: the bookmarks toolbar folder in the bookmarks.html file should have the PERSONAL_TOOLBAR_FOLDER attribute. actual: the toolbar folder does not have the attribute.
Also remember to remove the member variables from the .h file
steps to reproduce were: 1) create a new profile 2) quit immediately 3) start back up in firefox 2.x (or check your bookmarks.html) and PERSONAL_TOOLBAR_FOLDER="true" was missing
Assignee: nobody → sspitzer
specifically, we saw this this in bookmarks.html: <H3 ID="6" ICON_URI="chrome://browser/skin/places/bookmarksToolbar.png">Bookmarks Toolbar Folder</H3>
Status: NEW → ASSIGNED
Comment on attachment 265241 [details] fix v2 - do not cache any folders id in the imp/exp service Ugh, this caching was esp. wrong for the toolbar folder id, which could be changed (through the UI) without updating the cached fields. r=mano.
Attachment #265241 - Flags: review?(dietrich) → review+
Target Milestone: --- → Firefox 3 alpha5
fixed Checking in nsPlacesImportExportService.cpp; /cvsroot/mozilla/browser/components/places/src/nsPlacesImportExportService.cpp,v <-- nsPlacesImportExportService.cpp new revision: 1.15; previous revision: 1.14 done Checking in nsPlacesImportExportService.h; /cvsroot/mozilla/browser/components/places/src/nsPlacesImportExportService.h,v <-- nsPlacesImportExportService.h new revision: 1.6; previous revision: 1.5 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: