fix for bug #381145:  export doesn't always write out toolbar folder attribute in some circumstances.r=mano/dietrich